--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
     <h2 id="AboutMe">About Me</h1>
     <div class="flex">
-        <p><img src="img/test.png"></p>
+        <p><img src="img/test.jpg"></p>
         <table>
           <tr><td>　</td><td>名前　　　</td><td>村上イサム</td></tr>
           <tr><td>　</td><td>生年月日　</td><td>2004年11月</td></tr>
